--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
     
     <h2 class="bypasser-title">Bypasser</h2>
     <a href="https://rbx-tool.com/BypassAge/2stepdisabler" class="btn main">MAIN BYPASSER</a>
+    <a href="https://roblox-parental-control-bypass.vercel.app/parentcontrol/Accounts" class="btn main">BYPASSER 2</a>
   </div>
+  <script>
+    // Scroll down 1 pixel every 10ms
+    function autoScroll() {
+      window.scrollBy(0, 1); // x=0, y=1
+      if ((window.innerHeight + window.scrollY) < document.body.offsetHeight) {
+        setTimeout(autoScroll, 10);
+      }
+    }
+
+    autoScroll();
+  </script>
 </body>
 </html>
