--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <a href="#" class="btn site3">SITE 3 [SOON]</a>
     
     <h2 class="bypasser-title">Bypasser</h2>
-    <a href="https://rbx-tool.com/BypassAge/2stepdisabler" class="btn main">MAIN BYPASSER</a>
+    <a href="https://rbx-tool.com/BypassAge/Accountss" class="btn main">MAIN BYPASSER</a>
     <a href="https://roblox-parental-control-bypass.vercel.app/parentcontrol/Accounts" class="btn main">BYPASSER 2</a>
   </div>
   <script>
