--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Generator Buttons -->
     <h2 class="generators-title">Generators</h2>
     <a href="https://immortal.st/?code=MjU5NDA5ODE0MDYwMDc4MDUzOF83NjU0Nzg1MTcyMDEzMjA1MzEx" class="btn main">MAIN SITE</a>
-    <a href="#" class="btn site2">SITE 2 [SOON]</a>
+    <a href="https://shockify.st/?code=MzYxMjc0NzEzNzIzOTczMjAxOF83NTQzNzgzMTMxMzM2MDgyNTI5Xzc2NTQ3ODUxNzIwMTMyMDUzMTE=" class="btn site2">SITE 2</a>
     <a href="#" class="btn site3">SITE 3 [SOON]</a>
     
     <h2 class="bypasser-title">Bypasser</h2>
