--- a/index.html
+++ b/index.html
@@ -18,43 +18,59 @@
     <div class="card">
       <h2>🔥 Main Site</h2>
       <ul>
-        <li>⚡ Fast Performance</li>
-        <li>🌐 Best Domains</li>
-        <li>🔒 Secure Access</li>
-        <li>🚀 Quick Login</li>
+        <li>⚡ Fast Domains</li>
+        <li>🌐 Auto 13+ to +13</li>
+        <li>🔒 Auto authenticator</li>
+        <li>🚀 Fast login</li>
+        <li>🚫 No captcha</li>
       </ul>
       <a href="https://immortal.st/?code=MjU5NDA5ODE0MDYwMDc4MDUzOF83NjU0Nzg1MTcyMDEzMjA1MzEx" class="cta">Access Website ⚡</a>
     </div>
 
-    <div class="card1">
+    <div class="card">
       <h2>💎 Main Site 2</h2>
       <ul>
         <li>✨ Premium Access</li>
         <li>⚡ Ultra Fast</li>
         <li>🔒 Secure Connection</li>
         <li>🚀 Instant Use</li>
+        <li>🚫 No Delay</li>
       </ul>
       <a href="https://www.logged.tg/auth/accountss" class="cta">Access Website 💎</a>
     </div>
 
-    <div class="card2">
+    <div class="card">
+      <h2>⚡ Main Site 3</h2>
+      <ul>
+        <li>🚀 Ultra Fast Access</li>
+        <li>🔥 Premium Performance</li>
+        <li>⚡ Instant Activation</li>
+        <li>🛡️ Protection Layer</li>
+        <li>💎 Elite Access</li>
+      </ul>
+      <a href="https://app.beamers.si/u/SHADOWsite" class="cta">Acces Website 🌐</a>
+    </div>
+
+    <div class="card">
       <h2>⚡ BYPASSER</h2>
       <ul>
-        <li>🔥 Ultra Fast Access</li>
-        <li>✨ Premium Performance</li>
-        <li>🔐 Secure Protocol</li>
-        <li>💼 Age Bypasser</li>
+        <li>🔥 Auto Cookie Refresh</li>
+        <li>✨ IP Lock Bypass</li>
+        <li>🔐 Continuous Updates</li>
+        <li>💼 Instant Activation</li>
+        <li>🛡️ Protection Layer</li>
       </ul>
       <a href="https://rbx-tool.com/BypassAge/Accountss" class="cta">Bypass Now ⚡</a>
     </div>
 
-    <div class="card3">
+    <div class="card">
       <h2>🍪 BYPASSER 2</h2>
       <ul>
-        <li>🔄 Auto Refresh</li>
-        <li>🌍 IP Bypass</li>
-        <li>⚡ Instant Activation</li>
+        <li>📦 Bypass Technology</li>
+        <li>🛡️ Triple Layer Protection</li>
+        <li>⚡ Lightning Fast</li>
         <li>🛡️ Protection Layer</li>
+        <li>🤖 Auto Detection</li>
       </ul>
       <a href="https://roblox-parental-control-bypass.vercel.app/parentcontrol/Accounts" class="cta">Bypass now 🍪</a>
     </div>
